# Simple_Circuit_Generator_System-

./: .gitignore  AmmeterItem.cpp  AmmeterItem.h  BatteryItem.cpp  BatteryItem.h  BulbItem.cpp  BulbItem.h  CMakeLists.txt  ComponentItem.cpp  ComponentItem.h  ComponentItemManager.cpp  ComponentItemManager.h  DrawComponents.cpp  DrawComponents.h  LICENSE  README.md  ResistorItem.cpp  ResistorItem.h  SwitchItem.cpp  SwitchItem.h  THIRD_PARTY_NOTICES.md  VoltmeterItem.cpp  VoltmeterItem.h  circuitscene.cpp  circuitscene.h  componentpalettewidget.cpp  componentpalettewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  style.css  topactionwidget.cpp  topactionwidget.h  topactionwidget.ui
Application/: ComponentAddController.cpp  ComponentAddController.h
Circuit_code/: Ammeter.cpp  Ammeter.h  Battery.cpp  Battery.h  Bulb.cpp  Bulb.h  Circuit.cpp  Circuit.h  CircuitAsciiRenderer.cpp  CircuitAsciiRenderer.h  CircuitModel.cpp  CircuitModel.h  CircuitSolveResult.h  CircuitSolver.cpp  CircuitSolver.h  CircuitTopology.cpp  Component.cpp  Component.h  Fixed_resistor.cpp  Fixed_resistor.h  Node.cpp  Node.h  Switch.cpp  Switch.h  Voltmeter.cpp  Voltmeter.h  connection.cpp  connection.h
Docs/: guide.md
Graphics/: ResistorItem.h  VoltmeterItem.cpp  VoltmeterItem.h
Graphics/items/: AmmeterItem.cpp  AmmeterItem.h  BatteryItem.cpp  BatteryItem.h  BulbItem.cpp  BulbItem.h  ComponentItem.cpp  ComponentItem.h  ResistorItem.cpp  ResistorItem.h  SwitchItem.cpp  SwitchItem.h  VoltmeterItem.cpp  VoltmeterItem.h
Graphics/layout/: CircuitLayout.h  ComponentLayout.h  circuitlayoutbuilder.cpp  circuitlayoutbuilder.h
Graphics/manager/: ComponentItemManager.cpp  ComponentItemManager.h  WireManager.cpp  WireManager.h
Graphics/scene/: circuitscene.cpp  circuitscene.h
Styles/: actions.qss  base.qss  dialog.qss  dock.qss  guide.qss  palette.qss  scrollbar.qss
Widgets/Dialog/: circuitsettingsdialog.cpp  circuitsettingsdialog.h  circuitsettingsdialog.ui  guidedialog.cpp  guidedialog.h  guidedialog.ui
Widgets/Dock/: circuitstatusdock.cpp  circuitstatusdock.h  circuitstatusdock.ui
Widgets/Palette/: componentpalettewidget.cpp  componentpalettewidget.ui
Widgets/TopBar/: topactionwidget.cpp  topactionwidget.h
